# cineverse

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  movie_friend_intro.html  pyproject.toml
alembic/: env.py
alembic/versions/: 20260616_0001_initial_schema.py  20260702_0002_add_recommended_movies_to_chat_messages.py  20260703_0003_sync_external_db_schema.py  20260703_0004_create_character_aliases.py  20260706_0007_sync_external_profile_and_actors.py  20260709_0008_create_daily_ai_recommendations.py  20260714_0009_create_password_reset_tokens.py  20260714_0010_create_email_verification_codes.py  20260714_0011_add_revoked_at_to_password_reset_tokens.py  25d8a2a18004_add_refresh_tokens_table.py
app/: main.py
app/ai_client/: base.py  chat.py  recommend.py
app/api/: admin.py  auth.py  chat.py  movies.py  users.py
app/core/: base.py  config.py  current_user.py  dependencies.py  security.py
app/models/: __init__.py  actors.py  admin.py  character.py  chat.py  daily_ai_recommendation.py  interactions.py  movies.py  tokens.py  users.py
app/repsitories/: chat_repository.py
docs/: backend-api-spec.md  db-schema-spec.md  frontend-api-spec-notion.html  frontend-api-spec-notion.md  frontend-character-detail-api-spec.md
frontend/: .dockerignore  DEPLOYMENT.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
gpu-monitoring/: .gitignore  README.md  docker-compose.yml
scripts/: backfill_movie_keywords.py  import_cineverse_characters.py  import_tmdb_popular_movies.py  render_api_spec_html.py  update_movie_titles_ko.py
(+120 files in other folders)
