[project]
name = "cineverse"
version = "0.1.0"
description = "backserver-app env"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.137.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.27.0",
    "python-multipart==0.0.32",
    "aiosmtplib>=5.1.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

# 가상환경 상태에서 실행 할 것
# 실행 코드 :
# python -m pip install -e .
